# DemoExamTemplate

./: README.md  antAPI.md  api.spec  electron-builder.config.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  tsconfig.electron.json  vite.config.ts
engine/: api.py  api_model.py  base.py  config.py  db.py  db_preset.py  exceptions.py  utils.py
engine/auth/: depends.py  domain.py  exceptions.py  models.py
engine/auth/repos/: __init__.py  roles_repo.py  user_repo.py
engine/auth/routers/: __init__.py  auth_router.py  roles_router.py
engine/auth/schemas/: schemes.py  ws_schemas.py
engine/auth/services/: auth_service.py  role_service.py  user_manager.py
src/: index.html
src/electron/: main.js  preload.js  renderer.js
src/render/: App.tsx
src/render/antd_demo/components/: Buttons.tsx
